@@ -24,7 +24,7 @@
 
 /* This is dvipdfmx, an eXtended version of dvipdfm by Mark A. Wicks.
 
-    Copyright (C) 2002-2014 by Jin-Hwan Cho and Shunsaku Hirata,
+    Copyright (C) 2002-2015 by Jin-Hwan Cho and Shunsaku Hirata,
     the dvipdfmx project team.
 
     Copyright (C) 1998, 1999 by Mark A. Wicks <mwicks@kettering.edu>
@@ -78,13 +78,7 @@
 
 #include "mfileio.h"
 #include "numbers.h"
-
 #include "jpegimage.h"
-
-#include <stdlib.h>
-#include <string.h>
-
-#include "kpathsea/lib.h" /* for xmalloc/xrealloc prototypes */
 
 #define JPEG_DEBUG_STR "JPEG"
 #define JPEG_DEBUG     3
